<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">组队宝</string>
    <string name="logo_name">组 队 宝</string>
    <string name="titleBar">信息填写</string>
    <string name="userName">用户名</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="phoneNum">手机号码（登录账号）</string>
    <string name="password">密码</string>
    <string name="company">所属公司</string>
    <string name="tourist">游客</string>
    <string name="guide">导游</string>
    <string name="btn_save">保存</string>
    <string name="hint"><b>已有账号，点击前往登录</b></string>
    <string name="phone">手 机</string>
    <string name="login_password">密 码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="createTeam">创建队伍</string>
    <string name="chatarea">讨论区</string>
    <string name="dingwei">定位</string>
    <string name="naozhong">闹钟</string>
    <string name="resource">旅游资源</string>
    <string name="comment">旅游评价</string>
    <string name="chat">聊天</string>
    <string name="toupiao">投票</string>
    <string name="qiandao">签到</string>
    <string name="teamate">队伍成员</string>
    <string name="route">旅游行程</string>
    <string name="createTravel">队伍创建</string>
    <string name="teamName">队伍名称</string>
    <string name="travelTime">旅游时间</string>
    <string name="teamIntro">队伍简介</string>
    <string name="btn_create">创建</string>
    <string name="hints1">请长按此二维码，保存至手机，</string>
    <string name="hints2">让学生根据队伍码进入您的队伍。</string>
    <string name="save_picture">保存图片</string>
</resources>
