<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#E4E4E4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createTravel"
        android:textColor="@color/black"
        android:layout_marginBottom="15dp"
        android:textSize="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1">

        <EditText
            android:id="@+id/edit_teamName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:hint="@string/teamName"
            android:textAlignment="center"
            android:maxLines="1"
            android:padding="3dp"
            android:background="@drawable/edit_register_bg"
            android:layout_margin="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1">

        <EditText
            android:id="@+id/edit_travelTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:hint="@string/travelTime"
            android:textAlignment="center"
            android:maxLines="1"
            android:padding="3dp"
            android:background="@drawable/edit_register_bg"
            android:layout_margin="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1">

        <EditText
            android:id="@+id/edit_teamIntro"
            android:layout_width="0dp"
            android:layout_height="100dip"
            android:layout_weight="0.65"
            android:hint="@string/teamIntro"
            android:textAlignment="center"
            android:padding="3dp"
            android:background="@drawable/edit_register_bg"
            android:layout_margin="15dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_create"
        android:layout_marginTop="13dp"/>

</LinearLayout>
