<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/index_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_name"
        android:textColor="@color/white"
        android:textSize="26dip"
        android:layout_marginBottom="30dip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="18dip" />

        <EditText
            android:id="@+id/edit_phoneNum"
            android:layout_width="0dp"
            android:layout_height="35dip"
            android:layout_weight="0.7"
            android:textAlignment="center"
            android:maxLines="1"
            android:padding="3dp"
            android:background="@drawable/edit_register_bg"
            android:layout_margin="15dp"
            android:maxLength="11"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textColor="@color/white"
            android:textSize="18dip"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="35dip"
            android:layout_weight="0.7"
            android:textAlignment="center"
            android:maxLines="1"
            android:padding="3dp"
            android:background="@drawable/edit_register_bg"
            android:layout_margin="15dp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dip"
        android:layout_height="30dip"
        android:text="@string/login"
        android:background="@drawable/btn_login"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="100dip"
        android:layout_height="30dip"
        android:text="@string/register"
        android:background="@drawable/btn_register"
        android:layout_marginTop="10dip"/>
</LinearLayout>
